Remove unnecessary files Change aboute me background image and header

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="css/clean-blog.css" rel="stylesheet">
 
   </head>
 
@@ -53,8 +53,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
-              <h1>About Me</h1>
-              <span class="subheading">This is what I do.</span>
+              <h2>"Stay Hungry. Stay Foolish."​<span id="headingaboutme">- Steve Jobs</span></h2>
             </div>
           </div>
         </div>
@@ -65,7 +64,6 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>"Stay Hungry. Stay Foolish."​ - Steve Jobs </p>
           <p>First of all let me introduce myself. I always had a curious and problem solver attitude and most likely this is the reason I pursued a research career. In the research field is mandatory to have grit, think first then act, and creativity and in my opinion all those characteristics are needed in a successful data scientist.</p>
           <p>Due to this and all my previous professional experiences I am deepening my data skills through self learning. I have improved my Python knowledge through a Coursera course and in the last few months I have been improving my machine learning knowledge through online courses and Kaggle challenges.</p>
           <p>Therefore, I decided to make this repository public, where you can find the Kaggle's challenges that I have been analyzing since Jan'18.</p>
