Fix favicon url

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Inês Rosete - From Chemistry to Data Science</title>
 
-    <link rel="icon" type="image/png" href=img/favicon.png">
+    <link rel="shortcut icon" type="image/png" href=/img/favicon.png">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
