Update about_me page Update inesrosete link - home page

--- a/about.html
+++ b/about.html
@@ -20,6 +20,11 @@
 
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.css" rel="stylesheet">
+    <!-- Custom fonts ines -->
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coda+Caption:800" rel="stylesheet">
 
   </head>
 
@@ -62,51 +67,26 @@
 
     <!-- Main Content -->
     <div class="container">
-      <div class="row">
-      </div>
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto text-justify">
-          <p>When I meet people they are often surprised to learn that my background is Chemistry. They ask me what I did during the time I did research in Chemistry and I will explain briefly what I did. </p>
-          <p>Since childhood I have been fascinated with Chemistry (more specifically with bread fabrication process. When I was a child I dreamed of being a baker :P) and during the BSc and MSc degrees, my main goal was to follow an academic career studying smart materials and biomaterials. With that in mind, I spent about three years researching in the organic chemistry field. </p>
-          <div class="col-lg-8 mx-auto text-center">
-              <img class="img-fluid image-about-me" style = "width:100%" src = "img/photo_me2.png" alt="Responsive image">
-              <span class = "caption text-muted">Me when I was 20 years old with Professor Peter Atkins - Best Poster Award @ 3rd ENEQUI conference.</span>
-          </div>
-          <p>There, I worked with ionic liquids in two distinct directions, the first as drug encapsulation agents. The second and most crazy, as element in the development of a new electrolyte polymer. In all of this work it was used NMR spectroscopy technique, mainly in <a target="_blank" href="https://sites.fct.unl.pt/labnmr-cenimat/">CENIMAT NMR laboratory</a> @ FCT NOVA.</p>
-          <div class="col-lg-8 mx-auto text-center">
-              <img class="img-fluid image-about-me" style = "width:100%" src = "img/photo_lab.jpg" alt="Responsive image">
-              <span class = "caption text-muted">NMR spectrometer used to gel’s study in my MSc thesis.</span>
-          </div>
-          <p>During my MSc degree in Bioorganic Chemistry @ <a target="_blank" href="https://www.fct.unl.pt/">FCT NOVA</a> I’ve developed and fully investigated a new cellulose polymeric material. The project was extremely interesting since the use of cellulose as a backbone of polymer ionic liquids allows the production of new materials that bring together some of the unique properties of ionic liquids with the intrinsic polymer features. Since the material has shown promising results, a patent was submitted.</p>
-          <!--
-          <div class="col-lg-5 mx-auto text-center">
-              <figure>
-              <img class="img-fluid image-about-me" style = "width:100%" src = "img/photo_tubo.jpg" alt="Responsive image">
-              <fcaption>Polymer gel's first attempt.</fcaption>
-            </figure>
-          </div>
-          -->
-          <p>In this project I felt the need to study NMR T1 / T2 relaxation times of gel molecules. The mathematical method is a bit complex because the material is a gel, and that is when I first used the python skills I had at the time.</p>
-          <p>After finish my MSc degree I decided to improve my knowledge and enrolled on <a target="_blank" href="https://www.coursera.org/learn/machine-learningAndrew">Andrew Ng’s Machine Learning course</a> (indeed, this is an amazing introdutory course for Machine Learning!), Smart Ninja programming weekend and Lisbon meetups. (In the future I will share with you books, blogs, online courses, Lisbon's meetups and the people who helped me on this journey).</p>
+      <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                  <div class="p-5">
+                    <img class="img-fluid rounded-circle" src = "img/photo_me1.jpg" alt="Responsive image">
+                  </div>
+                </div>
+                <div class="col-lg-6 order-lg-1 text-justify">
+                  <div class="p-5">
+                    <h4 class="typeabout">About me</h4>
 
-          <p>After spending a year and a half in a consulting company, I felt the need to start document all the work I have done. Consequently, I build up a <a target="_blank" href="https://github.com/inesrosete/DataScience">GitHub repository</a> with Python's exercises and Kaggle’s challenges. Because of that I have being spending much more time practicing / solving challenges than reading books on machine learning. More recently I have been strengthen the knowledge already acquired and set goals from now on.</p>
-
-          <p>My first big Kaggle’s challenge was <a target="_blank" href="https://github.com/inesrosete/DataScience/blob/master/flight_delays_exploration.ipynb">Flights Delays and Cancellations</a>, where the goal is to predict when a flight is delayed. In that challenge I went through all data science steps: <b>basic statistics, build a baseline, data exploration / understanding, feature engineering</b> and <b>model iteration</b>. I recommend this challenge because it is a medium complex problem where you can practice <b>feature engineering</b>, the dataset is not that big, work with a <b>temporal component</b> and others.</p>
-          <div class="col-lg-12 mx-auto text-center">
-              <img class="img-fluid image-about-me" style = "width:100%" src = "img/photo_git.jpg" alt="Responsive image">
-              <span class = "caption text-muted">My Data Science GitHub repository.</span>
-          </div>
-
-          <p>Finally, I truly believe that smart work with the right amount of hard work is the key to success. This way of thinking motivates me to do my very best in everything I do. Thus, can chemists start a career in data science or improve their research career in chemistry? Of course! Anyone, from any background, truly motived can learn anything. Believe me, I know data scientist from very different fields.</p>
-
-          <p><b>Fun facts about me:</b> I keep all the pennies (1, 2, 5, 10, and 20 cents in euros) I have in Nutella pots<br><br>
-
-            I'm clumsy, colecciono moedas de 1, 2 e 5 cêntimos em potes de Nutella (durante os 5 anos de faculdade atingi cerca de 5k moedas), stresso ao ver sangue, I love basketball and I dont see series nor movies (but I know almost everything by articles and posts that I read so as not to get lost in jokes among friends :P).</p>
-          <br><br><br>
-          <p>Finally, can chemists start a career in data science or improve their research career in chemistry? I always had a curious and problem solver attitude and most likely this is the reason I pursued a research career. In the research field is mandatory to have grit, think first then act, and creativity and in my opinion all those characteristics are needed in a successful data scientist.</p>
-          <p>(rascunho) I truly believe that smart work with the right amount of hard work is the key to success. This way of thinking motivates me to do my very best in everything I do.</p>
-
-        </div>
+                    <h4 class="headabout">DATA SCIENTIST ENTHUSIASTIC <span class="inescolor">|</span> INNOVATION <span class="inescolor">|</span> ENERGY</h4>
+                    <p>I am a creative and cat lover person with a Master degreee in Bioorganic Chemistry @ FCT NOVA. During my MSc degree, in 2016, I've developed and fully investigated a new cellulose polymeric material. Since the material has shown promising results, a patent was submitted.<br>
+                    Then, I decided to shift to Data Science and to do so I started attending online courses, going to Lisbon's meetups and solving Kaggle's challenges.<br>
+                    After spending a year and a half in a consulting company, I felt the need to start document all the work I have done. Consequently, I built a GitHub repository and launch this blog.</p>
+                    <blockquote class="blockquote">I truly believe that smart work with the right amount of hard work is the key to success. This way of thinking motivates me to do my very best in everything I do.</blockquote>
+                    <hr>
+                   <h4 class="funfacts">Fun facts</h4>
+                    <p><span class="dot"></span> I keep all the <b>pennies</b> I have <b>in Nutella pots</b>. I have already reached 5k pennies! <span class="dot"></span> I love <b>basketball</b> <span class="dot"></span> I <b>do not watch series</b> nor <b>movies</b> (but I know almost everything by articles and posts that I read so as not to get lost in jokes among friends :P)</p>
+                  </div>
+                </div>
       </div>
     </div>
 
