Fix typos and images sizes

--- a/about.html
+++ b/about.html
@@ -78,13 +78,13 @@
                     <h4 class="typeabout">About me</h4>
 
                     <h4 class="headabout">DATA SCIENTIST ENTHUSIASTIC <span class="inescolor">|</span> INNOVATION <span class="inescolor">|</span> ENERGY</h4>
-                    <p>I am a creative and cat lover person with a Master degreee in Bioorganic Chemistry @ FCT NOVA. During my MSc degree, in 2016, I've developed and fully investigated a new cellulose polymeric material. Since the material has shown promising results, a patent was submitted.<br>
+                    <p>I am a creative and cat lover person with a Master degree in Bioorganic Chemistry @ FCT NOVA. During my Master, in 2016, I've developed and fully investigated a new cellulose polymeric material. Since the material has shown promising results, a patent was submitted.<br>
                     Then, I decided to shift to Data Science and to do so I started attending online courses, going to Lisbon's meetups and solving Kaggle's challenges.<br>
                     After spending a year and a half in a consulting company, I felt the need to start document all the work I have done. Consequently, I built a GitHub repository and launch this blog.</p>
                     <blockquote class="blockquote">I truly believe that smart work with the right amount of hard work is the key to success. This way of thinking motivates me to do my very best in everything I do.</blockquote>
                     <hr>
                    <h4 class="funfacts">Fun facts</h4>
-                    <p><span class="dot"></span> I keep all the <b>pennies</b> I have <b>in Nutella pots</b>. I have already reached 5k pennies! <span class="dot"></span> I love <b>basketball</b> <span class="dot"></span> I <b>do not watch series</b> nor <b>movies</b> (but I know almost everything by articles and posts that I read so as not to get lost in jokes among friends :P)</p>
+                    <p><span class="dot"></span> I keep all the <b>pennies</b> I have <b>in Nutella pots</b>. I have already reached 5k pennies! <span class="dot"></span> I love <b>basketball</b> <span class="dot"></span> I <b>do not watch series</b> nor <b>movies</b> (but I know almost everything by articles and posts that I read so that I do not get lost in jokes among friends :P)</p>
                   </div>
                 </div>
       </div>
