--- a/about.html
+++ b/about.html
@@ -3,6 +3,16 @@
 
   <head>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122356839-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-122356839-1');
+    </script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -75,7 +85,7 @@
                 </div>
                 <div class="col-lg-6 order-lg-1 text-justify">
                   <div class="p-5">
-                    <h4 class="typeabout">About me</h4>
+                    <h4 class="typeabout">About</h4>
 
                     <h4 class="headabout">DATA SCIENTIST ENTHUSIASTIC <span class="inescolor">|</span> INNOVATION <span class="inescolor">|</span> ENERGY</h4>
                     <p>I am a creative and cat lover person with a Master degree in Bioorganic Chemistry @ FCT NOVA. During my Master, in 2016, I've developed and fully investigated a new cellulose polymeric material. Since the material has shown promising results, a patent was submitted.<br>
